fix bug on mobile

--- a/styles/timeline.css
+++ b/styles/timeline.css
@@ -70,7 +70,7 @@
 }
 
 .timeline {
-    width: 100%;
+    width: 80%;
     height: auto !important;
     max-width: 800px;
     margin: 0 auto;
